[package]
name = "rdux"
description = "A terminal multiplexer with sane defaults and SemVer 2 in mind"
license = "Apache-2.0"
license-file = "LICENSE.txt"
version = "0.1.0"
authors = ["Mark S. Maglana <mmaglana@gmail.com>"]
repository = "https://github.com/relaxdiego/rdux"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
